Some JVM tunings & enable GC logging