@@ -23,6 +23,11 @@ GOTO end
 SET HAZELCAST_MEMORY_MB=32
 
 :exec
-java -server -Xms%HAZELCAST_MEMORY_MB%m -Xmx%HAZELCAST_MEMORY_MB%m -Djava.net.preferIPv4Stack=true -DhazelcastServerHome=%HAZELCAST_SERVER_HOME% -classpath "%HAZELCAST_SERVER_HOME%\lib;%HAZELCAST_SERVER_HOME%\lib\*" -DconfigFile=%HAZELCAST_SERVER_HOME%\config\hazelcast.xml ddth.hazelcastserver.HazelcastServerBootstrap
+REM -XX:-UseGCOverheadLimit
+SET OPTS_JVM=-server-Xms%HAZELCAST_MEMORY_MB%m -Xmx%HAZELCAST_MEMORY_MB%m -Djava.net.preferIPv4Stack=true -Djava.awt.headless=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+SET OPTS_GC_LOG=-XX:PrintFLSStatistics=1 -XX:PrintCMSStatistics=1 -XX:+PrintTenuringDistribution -XX:+PrintGCDetails -XX:+PrintGCDateStamps -verbose:gc -Xloggc:%HAZELCAST_SERVER_HOME%\logs\garbage.log
+SET OPTS_HAZELCAST=-DhazelcastServerHome=%HAZELCAST_SERVER_HOME% -DconfigFile=%HAZELCAST_SERVER_HOME%\config\hazelcast.xml
+SET OPTS_CLASSPATH=-classpath "%HAZELCAST_SERVER_HOME%\lib;%HAZELCAST_SERVER_HOME%\lib\*"
+java %OPTS_JVM% %OPTS_GC_LOG% %OPTS_HAZELCAST% %OPTS_CLASSPATH% ddth.hazelcastserver.HazelcastServerBootstrap
 
 :end
